--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -86,7 +86,7 @@
               <!-- Login with Facebook -->
               <div class="row" style="margin-bottom: 10px;">
                 <div style="padding: 0 30px;">
-                  <button style="background: #3b5998;width: 100%; border: 1px solid #121212;" class="btn btn-primary"><a href="{{ url_for('login_facebook') }}" style="letter-spacing: 1px;text-transform: initial;text-decoration: none; color:#f8f8f8;">
+                  <button style="background: #3b5998;width: 100%; border: 1px solid #121212;" class="btn btn-primary"><a href="/user-login/facebook" style="letter-spacing: 1px;text-transform: initial;text-decoration: none; color:#f8f8f8;">
                   <img style="max-height: 30px; margin-right: 8px;
                   padding: 4px;" src="{{ url_for('static', filename = 'images/fb.png') }}"/>Login With Facebook</a></button>
                 </div>
