--- a/templates/shop-product-list.html
+++ b/templates/shop-product-list.html
@@ -107,8 +107,9 @@
                   </div>
                   <h3><a href="/item-detail?product-id={{ p.id }}">{{p.name}}</a></h3>
                   <div class="pi-price">${{p.price}}</div>
-                  <a href="javascript:;" class="btn btn-default add2cart {% if p.amount|int==0 %}disabled{% endif %}" onclick="addToCart({{p.id}}, '{{p.name}}', {{p.price}}, '{{p.image}}', '{{p.chip}}', {{p.ram}})">Add to cart</a>
-                </div>
+                  <a href="javascript:;" class="btn btn-default add2cart {% if p.amount|int==0 %}disabled{% endif %}" 
+                  onclick="addToCart({{ p.id }}, '{{ p.name|replace("'", "\\'") }}', {{ p.price }}, '{{ p.image }}', '{{ p.chip|replace("'", "\\'") }}', {{ p.ram }})">Add to cart</a>
+                               </div>
               </div>
               {% endfor %}
             </div>
@@ -147,8 +148,9 @@
   <div class="container">
         <div class="owl-carousel owl-carousel6-brands">
         {% for b in brand %}
-          <a href="/product-list?brand-id={{b.id}}"><img src="{{ b.icon}}" alt="canon" title="canon" style="width:120px;height:120px;object-fit: contain;padding: 15px;"></a>
-        {% endfor %}
+        <a href="/product-list?brand-id={{ b.id }}">
+          <img src="{{b.icon}}" alt="{{ b.name }}" title="{{ b.name }}" style="width:120px;height:120px;object-fit: contain;padding: 15px;">
+      </a>        {% endfor %}
         </div>
     </div>
 </div>
