--- a/templates/page-reg-page.html
+++ b/templates/page-reg-page.html
@@ -72,7 +72,7 @@
               </form>
             </div>
             <div class="col-md-7 col-sm-7">
-            <div style="width: 100%;height: 125%;transform: translateY(-70px);background: url('{{ url_for('static', filename='images/bg_reg.jpg') }}');background-size: cover;background-repeat: no-repeat;"></div>
+            <div style='width: 100%;height: 125%;transform: translateY(-70px);background: url("{{ url_for('static', filename='images/bg_reg.jpg') }}");background-size: cover;background-repeat: no-repeat;'></div>
             </div>
           </div>
         </div>
