--- a/templates/page-careers.html
+++ b/templates/page-careers.html
@@ -41,12 +41,12 @@
                 <div class="row front-lists-v1">
                     <div class="col-md-6">
                         <ul class="list-unstyled margin-bottom-20">
-                            <li><i class="fa fa-check"></i> Nguyen Anh Tuan</li>
+                            <li><i class="fa fa-check"></i>Phan Tai Nguyen</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-check"></i>Do Cao Minh Chi</li>
+                            <li><i class="fa fa-check"></i>Bui Truong Thinh</li>
                         </ul>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
 
                                 <h4>Name</h4>
                                 <ul>
-                                    <li>Nguyen Anh Tuan</li>
-                                    <li>Do Cao Minh Chi</li>
+                                    <li>Phan Tai Nguyen</li>
+                                    <li>Bui Truong Thinh</li>
                                 </ul>
 
                                 <p>Something more here....</p>
@@ -82,7 +82,7 @@
                                 </ul>
 
                                 <hr>
-                                <p>TMDT Final Project</p>
+                                <p>PyWeb Project</p>
                             </div>
                         </div>
                     </div>         
@@ -93,17 +93,17 @@
       <div class="col-md-3 col-sm-3 sidebar2">
         <h2 class="padding-top-30">Our Contacts</h2>
         <address>
-          <strong>Thu Duc City</strong><br>
+          <strong>DHSG</strong><br>
           <br>
-          Vo Van Ngan Street, Linh Chieu<br>
+          An Duong Vuong Street, District 5<br>
           Ho Chi Minh City <br>
           Viet Nam <br>
           <abbr title="Phone">P:</abbr> +842837221223
         </address>
         <address>
           <strong>Email</strong><br>
-          <a href="">nat@email.com</a><br>
-          <a href="">dcmc@example.com</a>
+          <a href="">ptn@email.com</a><br>
+          <a href="">btt@example.com</a>
         </address>
 
         <h2 class="padding-top-20">Contact Form</h2>
