Changes some structures

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -67,9 +67,9 @@
       <div class="col-md-3 col-sm-6 pre-footer-col">
         <h2>Our Contacts</h2>
         <address class="margin-bottom-40">
-          35, Lorem Lis Street, Park Ave<br>
-          California, US<br>
-          Phone: 300 323 3456<br>
+          273, An Duong Vuong Street<br>
+          HCMC, VN<br>
+          Phone: 123 456 789<br>
           Fax: 300 323 1456<br>
           Email: <a href="mailto:info@metronic.com">info@metronic.com</a><br>
           Skype: <a href="skype:metronic">metronic</a>
